# Depowdering_ws

./: .gitignore
depowdering_ws/src/add_post_pro2/Robotic-Depowdering-for-Additive-Manufacturing-Via-Pose-Tracking-main/src/robotic_depowdering/: CMakeLists.txt
depowdering_ws/src/add_post_pro2/Robotic-Depowdering-for-Additive-Manufacturing-Via-Pose-Tracking-main/src/robotic_depowdering/data/: pipe_cm.xyz
depowdering_ws/src/add_post_pro2/Robotic-Depowdering-for-Additive-Manufacturing-Via-Pose-Tracking-main/src/robotic_depowdering/include/: utils.hpp
depowdering_ws/src/add_post_pro2/Robotic-Depowdering-for-Additive-Manufacturing-Via-Pose-Tracking-main/src/robotic_depowdering/launch/: path_planning.launch  pipe.launch
depowdering_ws/src/add_post_pro2/Robotic-Depowdering-for-Additive-Manufacturing-Via-Pose-Tracking-main/src/robotic_depowdering/src/: #icp_tracking.cpp#  icp_tracking.cpp  path_planning.cpp
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/: CMakeLists.txt  README.md
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/: Makefile  aravis-0.4.pc  config.status  configure  libtool
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/docs/: Makefile
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/docs/reference/: Makefile
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/gst/: Makefile  libgstaravis-0.4.la  libgstaravis_0.4_la-gstaravis.lo
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/gst-0.10/: Makefile
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/gst/.deps/: libgstaravis_0.4_la-gstaravis.Plo
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/gst/.libs/: libgstaravis-0.4.exp  libgstaravis-0.4.lai  libgstaravis-0.4.soT  libgstaravis-0.4.ver
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/po/: Makefile  Makefile.in  POTFILES  cs.gmo  hu.gmo  pt_BR.gmo  sr.gmo
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/src/: Aravis-0.4.gir  Aravis-0.4.typelib  Makefile  arv-fake-gv-camera-0.4  arv-tool-0.4  arvbuffer.lo  arvcamera.lo  arvchunkparser.lo  arvconfig.h  arvdebug.lo  arvdevice.lo  arvdomcharacterdata.lo  arvdomdocument.lo  arvdomdocumentfragment.lo  arvdomelement.lo  arvdomimplementation.lo  arvdomnamednodemap.lo  arvdomnode.lo  arvdomnodelist.lo  arvdomparser.lo  arvdomtext.lo  arvenums.lo  arvenumtypes.c  arvenumtypes.h  arvenumtypes.lo  arvevaluator.lo  arvfakecamera.lo  arvfakedevice.lo  arvfakeinterface.lo  arvfakestream.lo  arvgc.lo  arvgcboolean.lo  arvgccategory.lo  arvgccommand.lo  arvgcconverter.lo  arvgcenumentry.lo  arvgcenumeration.lo  arvgcfeaturenode.lo  arvgcfloat.lo  arvgcfloatnode.lo  (+28 more)
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/src/.deps/: arvbuffer.Plo  arvcamera.Plo  arvchunkparser.Plo  arvdebug.Plo  arvdevice.Plo  arvdomcharacterdata.Plo  arvdomdocument.Plo  arvdomdocumentfragment.Plo  arvdomelement.Plo  arvdomimplementation.Plo  arvdomnamednodemap.Plo  arvdomnode.Plo  arvdomnodelist.Plo  arvdomparser.Plo  arvdomtext.Plo  arvenums.Plo  arvenumtypes.Plo  arvevaluator.Plo  arvfakecamera.Plo  arvfakedevice.Plo  arvfakegvcamera.Po  arvfakeinterface.Plo  arvfakestream.Plo  arvgc.Plo  arvgcboolean.Plo  arvgccategory.Plo  arvgccommand.Plo  arvgcconverter.Plo  arvgcenumentry.Plo  arvgcenumeration.Plo  arvgcfeaturenode.Plo  arvgcfloat.Plo  arvgcfloatnode.Plo  (+28 more)
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/tests/: Makefile  arv-camera-test  arv-chunk-parser-test  arv-evaluator-test  arv-example  arv-genicam-test  arv-heartbeat-test  arv-test  arv-zip-test  buffer  evaluator  fake  genicam  load-http-test  misc  realtime-test  time-test
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/aravis-0.4.0/viewer/: Makefile
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/Calibration/: Calibration.cpp  Calibration.h  Calibration.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/ContainerMode/: ContainerMode.cpp  ContainerMode.h  ContainerMode.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/GetProfilesCallback/: GetProfilesCallback.cpp  GetProfilesCallback.h  GetProfilesCallback.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/LLTPeakFilter/: LLTPeakFilter.cpp  LLTPeakFilter.h  LLTPeakFilter.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/PartialProfile/: PartialProfile.cpp  PartialProfile.h  PartialProfile.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/PartialProfile_MulitLLT/: PartialProfile_MultiLLT.cpp  PartialProfile_MultiLLT.h  PartialProfile_MultiLLT.pro
depowdering_ws/src/add_post_pro2/depowdering_microepsilon_install-master/examples/mescanread/: mescanread.c  mescanread.h
depowdering_ws/src/add_post_pro2/pcl_sensor_data/: CMakeLists.txt  README.md
depowdering_ws/src/add_post_pro2/pcl_sensor_data/launch/: laser_processor.launch
depowdering_ws/src/add_post_pro2/pcl_sensor_data/src/: access_data.cpp  arrayData.csv  laser_playground.cpp  laser_playground.py  laser_processor.cpp  pointcloud_starter.py  seg_viewer.cpp  sensor_client.py  test_node.cpp
depowdering_ws/src/add_post_pro2/pcl_sensor_data/srv/: StopRecording.srv  angleAdjust.srv  avgZDistance.srv  laserMax.srv
(+1837 files in other folders)
